<resources>
    <string name="app_name">My Notes</string>
    <string name="title_notes">Notes</string>
    <string name="save_a_note_and_it_will_show_up_here">Save a note and it will show up here.</string>
    <string name="no_notes_added_yet">No notes added yet</string>
    <string name="label_note">Note</string>
    <string name="label_title">Title</string>
    <string name="label_save">Save</string>
    <string name="title_add_note">Add Note</string>
    <string name="template_created_at">Created at %1$s</string>
    <string name="title_note">Note</string>
</resources>
