<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@+id/btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_add_note_screen">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_title"
                    style="@style/Text.TitleLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/label_title"
                    android:maxLength="@integer/title_size" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_content"
                    style="@style/Text.TitleMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_content_add_note_screen"
                    android:background="@null"
                    android:hint="@string/label_note"
                    android:maxLength="@integer/title_size" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/action_btn_drawable"
            android:enabled="false"
            android:layout_margin="8dp"
            android:text="@string/label_save"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="@dimen/height_progress_add_note_screen"
            android:layout_height="@dimen/width_progress_add_note_screen"
            android:layout_marginEnd="@dimen/margin_following_progress_bar_add_note"
            android:indeterminateDrawable="@drawable/progress_drawable"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>